--- a/index.html
+++ b/index.html
@@ -1,64 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width">
-    <link href="style.css" rel="stylesheet" type="text/css" />
-  </head>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width">
+        <title>Sea Monster Crowdfunding</title>
+        <link href="style.css" rel="stylesheet" type="text/css" />
+    </head>
 
-  <body>
-    <!-- header row with logo -->
-    <div class="header">
-        <img id="tentacles" src="assets/tentacles.png">
-        <h1 class="header-text">Sea Monster Crowdfunding</h1>
-    </div>
+    <body> 
+        <!-- List of games for validation in search bars -->
+        <datalist id="games-list"></datalist>
+        <!-- Bg image for body -->
+        <header>
+            <div id="logo">
+                <p>SEA</p> 
+                <div>
+                    <img src="assets/tentacles.png" alt="Sea Monster tentacle logo"/>
+                </div>
+                <p>MONSTER</p>
+            </div>
+            <search>
+                    <input type="search" id="header-search" name="q" placeholder="Search for games" list="games-list"/>
+                    <button type="button" id="search-btn1" class="search-button">Search</button>
+            </search>
+        </header>
 
-    <!-- background info about company -->
-    <h2>Welcome to Sea Monster!</h2>
-    <div id="description-container">
-        <p>The purpose of our company is to fund independent games. We've been in operation for 12 years.</p>
-    </div>
-
-    <!-- top games & other interesting stats -->
-    <h2>Stats</h2>
-    <div class="stats-container">
-        <div class="stats-card">
-            <h3>Individual Contributions</h3>
-            <p id="num-contributions">
-            </p>
+        <div id='welcome-container'>
+            <section id="top-games">
+                <h4>Top Game</h4>
+                <div id="first-game"></div>
+                <h4>Runner Up</h4>
+                <div id="second-game"></div>
+            </section>
+            <section id="welcome">
+                <h1>We Are Sea Monster</h1>
+                <div id="welcome-description"></div>
+                <div id="stats">
+                    <div id="num-contributions"></div>
+                    <div id="total-raised"></div>
+                    <div id="num-games"></div>
+                </div>
+                <div>
+                    <button type="button" id="games-button">Games</button>
+                </div>
+            </section>
         </div>
-        <div class="stats-card">
-            <h3>Total Raised</h3>
-            <p id="total-raised">
-            </p>
-        </div>
-        <div class="stats-card">
-            <h3>Total Number of Games</h3>
-            <p id="num-games">
-            </p>
-        </div>
-    </div>
-    <div class="stats-container" id="top-games">
-        <div class="stats-card" id="first-game">
-            <h3>🥇 Top Funded Game</h3>
-        </div>
-        <div class="stats-card" id="second-game">
-            <h3>🥈 Runner Up</h3>
-        </div>
-    </div>
 
-    <!-- list of games funded by Sea Monster -->
-    <h2>Our Games</h2>
-    <p>Check out each of our games below!</p>
-    <div id="button-container">
-        <button id="unfunded-btn">Show Unfunded Only</button>
-        <button id="funded-btn">Show Funded Only</button>
-        <button id="all-btn">Show All Games</button>
-    </div>
-    <div id="games-container">
+        <div id='games-container'>
+            <section id="games-header">
+                <h1>Games</h1>
+                <div id="filter-options">
+                    <div id="filters">
+                        <button type="button" class="filter-button" id="unfunded-btn">Unfunded</button>
+                        <button type="button" class="filter-button" id="funded-btn">Funded</button>
+                        <button type="button" class="filter-button" id="all-btn">All</button>
+                    </div>
+                    <search>
+                        <input type="search" id="games-search" name="q" placeholder="Search for games" list="games-list"/>
+                        <button type="button" id="search-btn2" class="search-button">Search</button>
+                    </search>
+                </div>
+            </section>
+            <section id="games"></section>
+        </div>
+        
+        <script type="module" src="index.js"></script>
 
-    </div>
-
-    <script type="module" src="index.js"></script>
-  </body>
+    </body>
 </html>
+    
